2009-01-06  Jean-Louis Martineau <martineau@zmanda.com>,
	* server-src/driverio.c: Set *result_argv to NULL on EOF.
	* server-src/taper-mem-port-source.c: Set an error if the memory can't
	  be allocated for the memory buffer.

2009-01-05  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/runtar.c: remove unnecessary check for existence of
	  CLIENT_LOGIN

2009-01-05  Jean-Louis Martineau <martineau@zmanda.com>,
	* perl/Amanda/Archive.swg, perl/Amanda/Device.swg,
	  perl/Amanda/Xfer.swg: Fix compiler warning.
2009-01-05  Jean-Louis Martineau <martineau@zmanda.com>,
	* config/automake/scripts.am: Remove 'use lib' line before doing check.

2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: AM_INIT_AUTOMAKE(amanda, "2.6.1b2")
	* packaging/deb/rules, packaging/deb/buildpkg,
	  packaging/deb/changelog, packaging/rpm/buildpkg,
	  packaging/rpm/amanda.spec: Change version to 2.6.1b2.

2008-12-22  Paul Yeatman <pyeatman@zmanda.com>
	* man/entities/global.entities.in: added author/email entity for me
	* man/xml-source/amanda-auth.7.xml: newly added man page
	* man/Makefile.am: added amanda-auth to section 7
	* man/xml-source/amanda.conf.5.xml: removed details on auth parameter
	and added link to amanda-auth man page 
	* man/xml-source/amanda.conf.5.xml: moved AUTHORIZATION section to
	amanda-auth and added link to amanda-auth man page 

2008-12-22  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: retry on CURLE_GOT_NOTHING (52) to handle "connection reset by peer"

2008-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3.c: translate error code 0 to "None", not NULL

2008-12-22  Dustin J. Mitchell <dustin@zmanda.com>
	* application-src/amgtar.c,
	  application-src/amstar.c: Use sizeof(line) for argument to fgets.

2008-12-22  Jean-Louis Martineau <martineau@zmanda.com>,
	* man/xml-source/amarchiver.8.xml: amanda-archive-format man page is
	                                   in section 5.
